--- a/styles.css
+++ b/styles.css
@@ -143,9 +143,12 @@ button {
 }
 
 #histories {
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-around; */
+  display: grid;
+  grid-template-columns: auto auto auto ;
+  grid-gap: 15px;
 }
 
 .card {
@@ -153,7 +156,8 @@ button {
   height: 100%;
   padding: 50px;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  /* justify-content: center; */
   align-items: center;
   padding: 20px 30px;
   color: white;
@@ -167,6 +171,12 @@ button {
   backdrop-filter: blur(5px);
   margin-bottom: 30px;
 }
+
+.card p{
+  margin-top: 30px;
+  
+}
+
 
 #modal-background {
   background: rgb(255, 255, 255);
@@ -182,12 +192,34 @@ button {
   top: 0;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 576px) {
   .box-container {
     padding: 0 20px;
     width: 100%;
   }
   .card {
+    
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
+
+/* @media only screen and (min-width: 992px) {
+  .box-container {
+    padding: 0 20px;
+    width: 100%;
+  }
+  #histories {
+    display: grid;
+    grid-template-columns: auto auto auto ;
+    grid-gap: 15px; 
+    
+  }
+  .card {
+    
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}  */
