--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
 }
 
 #display {
-  height: 100px;
+  height: 120px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -147,8 +147,9 @@ button {
   flex-wrap: wrap;
   justify-content: space-around; */
   display: grid;
-  grid-template-columns: auto auto auto ;
-  grid-gap: 15px;
+  grid-template-columns: repeat(3,1fr) ;
+  grid-gap: 20px;
+  margin-bottom: 30px;
 }
 
 .card {
@@ -196,6 +197,20 @@ button {
   .box-container {
     padding: 0 20px;
     width: 100%;
+  }
+  #display {
+    height: 250px;
+    border-radius: 10px;
+    align-items:flex-start;
+    font-size:25px ;
+    padding-left: 10px;
+  }
+  
+  #histories {
+    display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+    
   }
   .card {
     
