--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ body {
   display: none;
 }
 #result {
-  position: absolute;
+  position: fixed;
   top: 50%; 
   left: 50%;
   transform: translate(-50%, -50%);
